--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-356.0KB/s(Youtube:不良林), server: 198.57.27.225, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇷🇺 俄罗斯联邦-214.2KB/s(Youtube:不良林), server: 213.183.53.198, port: 9093, type: ss, cipher: aes-256-cfb, password: wfLC2y7rzZyCmuyt}
-  - {name: 🇩🇪 德国-223.7KB/s(Youtube:不良林), server: 5.183.179.137, port: 9093, type: ss, cipher: aes-256-cfb, password: wfLC2y7rzZyCmuyt}
-  - {name: 🇺🇸 美国-3.50MB/s(Youtube:不良林), server: 38.114.114.69, port: 8000, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇦🇺 澳大利亚-694.2KB/s(Youtube:不良林), server: 185.167.117.171, port: 9040, type: ss, cipher: aes-256-cfb, password: p9z5BVADH2YFs3MN}
-  - {name: 🇦🇺 澳大利亚-254.8KB/s(Youtube:不良林), server: 185.167.117.171, port: 9079, type: ss, cipher: aes-256-cfb, password: TPqX8edgbAURcAMb}
-  - {name: 🇦🇺 澳大利亚-758.2KB/s(Youtube:不良林), server: 185.167.117.171, port: 9046, type: ss, cipher: aes-256-cfb, password: NvS8N4Vf8qAGPSCL}
-  - {name: 🇦🇺 澳大利亚-345.2KB/s(Youtube:不良林), server: 185.167.117.171, port: 9037, type: ss, cipher: aes-256-cfb, password: TN2YqghxeFDKZfLU}
-  - {name: 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林), server: 185.167.117.171, port: 9088, type: ss, cipher: aes-256-cfb, password: f8npKgNzdkss2ytn}
-  - {name: 🇦🇺 澳大利亚-340.5KB/s(Youtube:不良林), server: 185.167.117.171, port: 9060, type: ss, cipher: aes-256-cfb, password: ueLXVkvh4hckhErQ}
+  - {name: 🇦🇺 澳大利亚-222.8KB/s(Youtube:不良林), server: 185.167.116.253, port: 9015, type: ss, cipher: aes-256-cfb, password: ZpNDDKRu9MagNvaf}
+  - {name: 🇳🇱 荷兰-414.8KB/s(Youtube:不良林), server: 213.183.51.172, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
+  - {name: 🇨🇳 中国-5.13MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: f6f2072a2e4cfc91, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-185.7KB/s(Youtube:不良林), server: 213.183.53.179, port: 9032, type: ss, cipher: aes-256-cfb, password: UWZQeLRWnkqgkseq}
+  - {name: 🇳🇱 荷兰-417.3KB/s(Youtube:不良林), server: 213.183.59.218, port: 9001, type: ss, cipher: aes-256-cfb, password: UkXRsXvR6buDMG2Y}
+  - {name: 🇺🇸 美国-1.49MB/s(Youtube:不良林), server: 38.68.134.71, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇺🇸 美国-1.01MB/s(Youtube:不良林), server: 38.68.134.71, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇺🇸 美国-347.1KB/s(Youtube:不良林), server: 169.197.142.39, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇦🇺 澳大利亚-815.9KB/s(Youtube:不良林), server: jgwxn2.gaox.ml, port: 443, type: trojan, password: c2b60d6a-a2f5-40ff-b7f9-f7658abcbf26, sni: jgwxn2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-1.97MB/s(Youtube:不良林), server: 213.183.53.177, port: 9037, type: ss, cipher: aes-256-cfb, password: TN2YqghxeFDKZfLU}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-356.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-214.2KB/s(Youtube:不良林)
-      - 🇩🇪 德国-223.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.50MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-694.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-254.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-758.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-345.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-340.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-222.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-414.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.13MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-185.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-417.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-347.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-815.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.97MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-356.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-214.2KB/s(Youtube:不良林)
-      - 🇩🇪 德国-223.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.50MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-694.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-254.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-758.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-345.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-340.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-222.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-414.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.13MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-185.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-417.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-347.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-815.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.97MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-356.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-214.2KB/s(Youtube:不良林)
-      - 🇩🇪 德国-223.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.50MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-694.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-254.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-758.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-345.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-340.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-222.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-414.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.13MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-185.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-417.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-347.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-815.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.97MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-356.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-214.2KB/s(Youtube:不良林)
-      - 🇩🇪 德国-223.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.50MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-694.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-254.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-758.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-345.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-340.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-222.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-414.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.13MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-185.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-417.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-347.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-815.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.97MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-356.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-214.2KB/s(Youtube:不良林)
-      - 🇩🇪 德国-223.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.50MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-694.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-254.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-758.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-345.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-340.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-222.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-414.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.13MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-185.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-417.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-347.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-815.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.97MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-356.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-214.2KB/s(Youtube:不良林)
-      - 🇩🇪 德国-223.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.50MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-694.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-254.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-758.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-345.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-340.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-222.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-414.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.13MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-185.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-417.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-347.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-815.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.97MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-356.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-214.2KB/s(Youtube:不良林)
-      - 🇩🇪 德国-223.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.50MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-694.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-254.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-758.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-345.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-340.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-222.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-414.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.13MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-185.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-417.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-347.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-815.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.97MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
