--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇦🇺 澳大利亚-222.8KB/s(Youtube:不良林), server: 185.167.116.253, port: 9015, type: ss, cipher: aes-256-cfb, password: ZpNDDKRu9MagNvaf}
-  - {name: 🇳🇱 荷兰-414.8KB/s(Youtube:不良林), server: 213.183.51.172, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
-  - {name: 🇨🇳 中国-5.13MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: f6f2072a2e4cfc91, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-185.7KB/s(Youtube:不良林), server: 213.183.53.179, port: 9032, type: ss, cipher: aes-256-cfb, password: UWZQeLRWnkqgkseq}
-  - {name: 🇳🇱 荷兰-417.3KB/s(Youtube:不良林), server: 213.183.59.218, port: 9001, type: ss, cipher: aes-256-cfb, password: UkXRsXvR6buDMG2Y}
-  - {name: 🇺🇸 美国-1.49MB/s(Youtube:不良林), server: 38.68.134.71, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇺🇸 美国-1.01MB/s(Youtube:不良林), server: 38.68.134.71, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇺🇸 美国-347.1KB/s(Youtube:不良林), server: 169.197.142.39, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇦🇺 澳大利亚-815.9KB/s(Youtube:不良林), server: jgwxn2.gaox.ml, port: 443, type: trojan, password: c2b60d6a-a2f5-40ff-b7f9-f7658abcbf26, sni: jgwxn2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-1.97MB/s(Youtube:不良林), server: 213.183.53.177, port: 9037, type: ss, cipher: aes-256-cfb, password: TN2YqghxeFDKZfLU}
+  - {name: 🇳🇱 荷兰-1.15MB/s(Youtube:不良林), server: 213.183.51.172, port: 9037, type: ss, cipher: aes-256-cfb, password: TN2YqghxeFDKZfLU}
+  - {name: 🇳🇱 荷兰-367.8KB/s(Youtube:不良林), server: 213.183.59.229, port: 9038, type: ss, cipher: aes-256-cfb, password: gYCYXfkUQEs2TaJQ}
+  - {name: 🇸🇬 新加坡-451.5KB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: cd39f62aed7b90f6, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-4.24MB/s(Youtube:不良林), server: jgwdj4.gaox.ml, port: 443, type: trojan, password: c09eb137-bf68-4658-84e0-102d94b74168, sni: jgwdj4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-231.7KB/s(Youtube:不良林), server: 213.183.53.207, port: 9033, type: ss, cipher: aes-256-cfb, password: UTJA57ypk2XKQpnm}
+  - {name: 🇺🇸 美国-415.6KB/s(Youtube:不良林), server: 169.197.142.39, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇺🇸 美国-437.9KB/s(Youtube:不良林), server: 169.197.142.39, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇺🇸 美国-600.4KB/s(Youtube:不良林), server: 169.197.142.39, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇷🇺 俄罗斯联邦-566.2KB/s(Youtube:不良林), server: 213.183.53.207, port: 9053, type: ss, cipher: aes-256-cfb, password: SBM7R883jBmnqe6C}
+  - {name: 🇷🇺 俄罗斯联邦-579.6KB/s(Youtube:不良林), server: 213.183.53.207, port: 9030, type: ss, cipher: aes-256-cfb, password: GeregetR8cvQHzYr}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-222.8KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-414.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.13MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-185.7KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-417.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-347.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-815.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.97MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.15MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-367.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-451.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.24MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-231.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-415.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-437.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-600.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-566.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-579.6KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇦🇺 澳大利亚-222.8KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-414.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.13MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-185.7KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-417.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-347.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-815.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.97MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.15MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-367.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-451.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.24MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-231.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-415.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-437.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-600.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-566.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-579.6KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-222.8KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-414.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.13MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-185.7KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-417.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-347.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-815.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.97MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.15MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-367.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-451.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.24MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-231.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-415.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-437.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-600.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-566.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-579.6KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇦🇺 澳大利亚-222.8KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-414.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.13MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-185.7KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-417.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-347.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-815.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.97MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.15MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-367.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-451.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.24MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-231.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-415.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-437.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-600.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-566.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-579.6KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-222.8KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-414.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.13MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-185.7KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-417.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-347.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-815.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.97MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.15MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-367.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-451.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.24MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-231.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-415.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-437.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-600.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-566.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-579.6KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-222.8KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-414.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.13MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-185.7KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-417.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-347.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-815.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.97MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.15MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-367.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-451.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.24MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-231.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-415.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-437.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-600.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-566.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-579.6KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-222.8KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-414.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.13MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-185.7KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-417.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-347.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-815.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.97MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.15MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-367.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-451.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.24MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-231.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-415.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-437.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-600.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-566.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-579.6KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
