--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇳🇱 荷兰-1.15MB/s(Youtube:不良林), server: 213.183.51.172, port: 9037, type: ss, cipher: aes-256-cfb, password: TN2YqghxeFDKZfLU}
-  - {name: 🇳🇱 荷兰-367.8KB/s(Youtube:不良林), server: 213.183.59.229, port: 9038, type: ss, cipher: aes-256-cfb, password: gYCYXfkUQEs2TaJQ}
-  - {name: 🇸🇬 新加坡-451.5KB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: cd39f62aed7b90f6, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-4.24MB/s(Youtube:不良林), server: jgwdj4.gaox.ml, port: 443, type: trojan, password: c09eb137-bf68-4658-84e0-102d94b74168, sni: jgwdj4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-231.7KB/s(Youtube:不良林), server: 213.183.53.207, port: 9033, type: ss, cipher: aes-256-cfb, password: UTJA57ypk2XKQpnm}
+  - {name: 🇦🇺 澳大利亚-879.4KB/s(Youtube:不良林), server: 185.167.116.24, port: 9058, type: ss, cipher: aes-256-cfb, password: dML2sfhbVwvtfNPe}
+  - {name: 🇳🇱 荷兰-859.7KB/s(Youtube:不良林), server: 213.183.59.185, port: 9056, type: ss, cipher: aes-256-cfb, password: rNBfNuuANFCAk7KB}
+  - {name: 🇺🇸 美国-1.92MB/s(Youtube:不良林), server: 38.68.135.19, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇳🇱 荷兰-1.64MB/s(Youtube:不良林), server: 213.183.59.218, port: 9018, type: ss, cipher: aes-256-cfb, password: fG2artUmHfNT2cX7}
+  - {name: 🇦🇺 澳大利亚-1.61MB/s(Youtube:不良林), server: 185.167.116.24, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
   - {name: 🇺🇸 美国-415.6KB/s(Youtube:不良林), server: 169.197.142.39, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
   - {name: 🇺🇸 美国-437.9KB/s(Youtube:不良林), server: 169.197.142.39, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
   - {name: 🇺🇸 美国-600.4KB/s(Youtube:不良林), server: 169.197.142.39, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-1.15MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-367.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-451.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.24MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-231.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-879.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-859.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.64MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.61MB/s(Youtube:不良林)
       - 🇺🇸 美国-415.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-437.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-600.4KB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇳🇱 荷兰-1.15MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-367.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-451.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.24MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-231.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-879.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-859.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.64MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.61MB/s(Youtube:不良林)
       - 🇺🇸 美国-415.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-437.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-600.4KB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-1.15MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-367.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-451.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.24MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-231.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-879.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-859.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.64MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.61MB/s(Youtube:不良林)
       - 🇺🇸 美国-415.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-437.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-600.4KB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇳🇱 荷兰-1.15MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-367.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-451.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.24MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-231.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-879.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-859.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.64MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.61MB/s(Youtube:不良林)
       - 🇺🇸 美国-415.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-437.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-600.4KB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-1.15MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-367.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-451.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.24MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-231.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-879.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-859.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.64MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.61MB/s(Youtube:不良林)
       - 🇺🇸 美国-415.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-437.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-600.4KB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇳🇱 荷兰-1.15MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-367.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-451.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.24MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-231.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-879.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-859.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.64MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.61MB/s(Youtube:不良林)
       - 🇺🇸 美国-415.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-437.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-600.4KB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇳🇱 荷兰-1.15MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-367.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-451.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.24MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-231.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-879.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-859.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.64MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.61MB/s(Youtube:不良林)
       - 🇺🇸 美国-415.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-437.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-600.4KB/s(Youtube:不良林)
