--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,13 +5,13 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇦🇺 澳大利亚-879.4KB/s(Youtube:不良林), server: 185.167.116.24, port: 9058, type: ss, cipher: aes-256-cfb, password: dML2sfhbVwvtfNPe}
-  - {name: 🇳🇱 荷兰-859.7KB/s(Youtube:不良林), server: 213.183.59.185, port: 9056, type: ss, cipher: aes-256-cfb, password: rNBfNuuANFCAk7KB}
-  - {name: 🇺🇸 美国-1.92MB/s(Youtube:不良林), server: 38.68.135.19, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇳🇱 荷兰-1.64MB/s(Youtube:不良林), server: 213.183.59.218, port: 9018, type: ss, cipher: aes-256-cfb, password: fG2artUmHfNT2cX7}
-  - {name: 🇦🇺 澳大利亚-1.61MB/s(Youtube:不良林), server: 185.167.116.24, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
+  - {name: 🇳🇱 荷兰-757.8KB/s(Youtube:不良林), server: 213.183.51.172, port: 9014, type: ss, cipher: aes-256-cfb, password: KnJGad3FqTvjqbaX}
+  - {name: 🇳🇱 荷兰-1.02MB/s(Youtube:不良林), server: 213.183.59.218, port: 9011, type: ss, cipher: aes-256-cfb, password: M3t2ZEQcMGRWBjRa}
+  - {name: 🇳🇱 荷兰-197.6KB/s(Youtube:不良林), server: 213.183.51.172, port: 9040, type: ss, cipher: aes-256-cfb, password: p9z5BVADH2YFs3MN}
+  - {name: 🇷🇺 俄罗斯联邦-294.5KB/s(Youtube:不良林), server: 213.183.53.202, port: 9084, type: ss, cipher: aes-256-cfb, password: c3NtHJ5ujV2tGDfj}
+  - {name: 🇳🇱 荷兰-845.8KB/s(Youtube:不良林), server: 213.183.59.185, port: 9045, type: ss, cipher: aes-256-cfb, password: Lp27rqyJq72bZsqX}
   - {name: 🇺🇸 美国-415.6KB/s(Youtube:不良林), server: 169.197.142.39, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇺🇸 美国-437.9KB/s(Youtube:不良林), server: 169.197.142.39, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇺🇸 美国-2.68MB/s(Youtube:不良林), server: 169.197.142.39, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
   - {name: 🇺🇸 美国-600.4KB/s(Youtube:不良林), server: 169.197.142.39, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
   - {name: 🇷🇺 俄罗斯联邦-566.2KB/s(Youtube:不良林), server: 213.183.53.207, port: 9053, type: ss, cipher: aes-256-cfb, password: SBM7R883jBmnqe6C}
   - {name: 🇷🇺 俄罗斯联邦-579.6KB/s(Youtube:不良林), server: 213.183.53.207, port: 9030, type: ss, cipher: aes-256-cfb, password: GeregetR8cvQHzYr}
@@ -21,13 +21,13 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-879.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-859.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.64MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.61MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-757.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.02MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-197.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-294.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-845.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-415.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-437.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.68MB/s(Youtube:不良林)
       - 🇺🇸 美国-600.4KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-566.2KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-579.6KB/s(Youtube:不良林)
@@ -36,13 +36,13 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇦🇺 澳大利亚-879.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-859.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.64MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.61MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-757.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.02MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-197.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-294.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-845.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-415.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-437.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.68MB/s(Youtube:不良林)
       - 🇺🇸 美国-600.4KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-566.2KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-579.6KB/s(Youtube:不良林)
@@ -52,13 +52,13 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-879.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-859.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.64MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.61MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-757.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.02MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-197.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-294.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-845.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-415.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-437.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.68MB/s(Youtube:不良林)
       - 🇺🇸 美国-600.4KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-566.2KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-579.6KB/s(Youtube:不良林)
@@ -72,13 +72,13 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇦🇺 澳大利亚-879.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-859.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.64MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.61MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-757.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.02MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-197.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-294.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-845.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-415.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-437.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.68MB/s(Youtube:不良林)
       - 🇺🇸 美国-600.4KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-566.2KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-579.6KB/s(Youtube:不良林)
@@ -87,13 +87,13 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-879.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-859.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.64MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.61MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-757.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.02MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-197.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-294.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-845.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-415.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-437.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.68MB/s(Youtube:不良林)
       - 🇺🇸 美国-600.4KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-566.2KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-579.6KB/s(Youtube:不良林)
@@ -103,13 +103,13 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-879.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-859.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.64MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.61MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-757.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.02MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-197.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-294.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-845.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-415.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-437.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.68MB/s(Youtube:不良林)
       - 🇺🇸 美国-600.4KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-566.2KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-579.6KB/s(Youtube:不良林)
@@ -128,13 +128,13 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-879.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-859.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.64MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.61MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-757.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.02MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-197.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-294.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-845.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-415.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-437.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.68MB/s(Youtube:不良林)
       - 🇺🇸 美国-600.4KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-566.2KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-579.6KB/s(Youtube:不良林)
