--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇷🇺 俄罗斯联邦-2.39MB/s(Youtube:不良林), server: 213.183.53.179, port: 9059, type: ss, cipher: aes-256-cfb, password: 9XwYyZsK8SNzQDtY}
-  - {name: 🇳🇱 荷兰-1.14MB/s(Youtube:不良林), server: 213.183.59.185, port: 9031, type: ss, cipher: aes-256-cfb, password: BwcAUZk8hUFAkDGN}
-  - {name: 🇷🇺 俄罗斯联邦-3.26MB/s(Youtube:不良林), server: 213.183.53.200, port: 9033, type: ss, cipher: aes-256-cfb, password: UTJA57ypk2XKQpnm}
-  - {name: 🇦🇺 澳大利亚-2.28MB/s(Youtube:不良林), server: 185.167.116.24, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
-  - {name: 🇺🇸 美国-3.00MB/s(Youtube:不良林), server: 38.68.135.19, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇳🇱 荷兰-3.37MB/s(Youtube:不良林), server: 213.183.59.218, port: 9097, type: ss, cipher: aes-256-cfb, password: Sn5B7jTqr76aCJT8}
+  - {name: 🇺🇸 美国-3.24MB/s(Youtube:不良林), server: 38.68.135.19, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 阿联酋-1.22MB/s(Youtube:不良林), server: 217.138.193.6, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-4.62MB/s(Youtube:不良林), server: au2-1.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-1.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇳🇱 荷兰-1.54MB/s(Youtube:不良林), server: 213.183.59.185, port: 9032, type: ss, cipher: aes-256-cfb, password: UWZQeLRWnkqgkseq}
   - {name: 🇺🇸 美国-13.17MB/s(Youtube:不良林), server: hk02.bosaidong.buzz, port: 443, type: vmess, uuid: 96e19c0c-ba2f-47cf-b1d6-efef8f8fbb4d, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /JJkuv3, ws-headers: {Host: hk02.bosaidong.buzz}}
   - {name: 🇺🇸 美国-2.71MB/s(Youtube:不良林), server: hk01.bosaidong.buzz, port: 444, type: vmess, uuid: 96e19c0c-ba2f-47cf-b1d6-efef8f8fbb4d, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /JJkuv3, ws-headers: {Host: hk01.bosaidong.buzz}}
   - {name: 🇺🇸 美国-10.28MB/s(Youtube:不良林), server: 20.222.106.239, port: 80, type: vmess, uuid: 5f405152-88b2-4e5e-9091-b730e65e8983, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 20.222.106.239}}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-2.39MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.14MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.26MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.00MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
+      - 阿联酋-1.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.62MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.54MB/s(Youtube:不良林)
       - 🇺🇸 美国-13.17MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
       - 🇺🇸 美国-10.28MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇷🇺 俄罗斯联邦-2.39MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.14MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.26MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.00MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
+      - 阿联酋-1.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.62MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.54MB/s(Youtube:不良林)
       - 🇺🇸 美国-13.17MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
       - 🇺🇸 美国-10.28MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-2.39MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.14MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.26MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.00MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
+      - 阿联酋-1.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.62MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.54MB/s(Youtube:不良林)
       - 🇺🇸 美国-13.17MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
       - 🇺🇸 美国-10.28MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇷🇺 俄罗斯联邦-2.39MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.14MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.26MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.00MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
+      - 阿联酋-1.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.62MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.54MB/s(Youtube:不良林)
       - 🇺🇸 美国-13.17MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
       - 🇺🇸 美国-10.28MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-2.39MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.14MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.26MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.00MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
+      - 阿联酋-1.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.62MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.54MB/s(Youtube:不良林)
       - 🇺🇸 美国-13.17MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
       - 🇺🇸 美国-10.28MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-2.39MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.14MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.26MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.00MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
+      - 阿联酋-1.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.62MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.54MB/s(Youtube:不良林)
       - 🇺🇸 美国-13.17MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
       - 🇺🇸 美国-10.28MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-2.39MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.14MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.26MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.00MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
+      - 阿联酋-1.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.62MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.54MB/s(Youtube:不良林)
       - 🇺🇸 美国-13.17MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
       - 🇺🇸 美国-10.28MB/s(Youtube:不良林)
